# project

src/: .clang-format  ope_branch.sh
src/base_device/: CMakeLists.txt  README.md  package.xml
src/base_device/src/: i2c.cpp  uart.cpp
src/base_framework/: .gitignore  CMakeLists.txt  README.md  compile_commands.json  package.xml
src/base_framework/include/: log.h  log_factory.h  node_factory.h
src/base_framework/src/: function_factory.cpp  hj_utils.cpp  hj_zip.cpp  log_factory.cpp  node_cache.cpp  node_factory.cpp  shm.cpp
src/big_data/: CMakeLists.txt  README.md  compile_commands.json  package.xml
src/big_data/.git_hooks/: pre-commit
src/big_data/src/: big_data.cpp
src/clang_tidy_check/: README.md
src/collect_node/collect_node/: CMakeLists.txt  README.md  package.xml
src/collect_node/collect_node/config/T1pro/aarch64-linux-gnu/: config.json
src/collect_node/collect_node/config/T1pro/amd64/: config.json
src/collect_node/collect_node/config/x9/aarch64-linux-gnu/: config.json  config.json.bk_p3.5
src/collect_node/collect_node/config/x9/amd64/: config.json
src/collect_node/collect_node/src/: collect_node_manager.cpp
src/collect_node/demo/: CMakeLists.txt  package.xml
src/collect_node/demo/include/: demo.h
src/collect_node/demo/src/: demo.cpp
src/collect_node/heartbeat/: CMakeLists.txt  README.md  package.xml
src/collect_node/heartbeat/include/: heartbeat.h
src/collect_node/heartbeat/src/: heartbeat.cpp
src/collect_node/imu/: CMakeLists.txt  README.md  package.xml
src/collect_node/imu/include/: imu.h
src/collect_node/imu/src/: imu.cpp
src/collect_node/iot/: CMakeLists.txt  README.md  package.xml
src/collect_node/iot/doc/: hjIot.html  hjIot.md  hjIotInterface.md
src/collect_node/iot/include/: AppCommunication.h  AppDataRouter.h  AwsConnectionManager.h  BtConnectionManager.h  BuryPoint.h  Defines.h  IotMqttClient.h  IotMqttClientLink.h  IotShadowClient.h  IotShadowClientLink.h  NetConfig.h  Persistence.h  Utils.h  error.h
src/collect_node/iot/include/ApNetConfig/: ApConnectionManager.h  Buffer.h  Poll.h  TcpTransport.h
src/collect_node/iot/src/: AppCommunication.cc  AppDataRouter.cc  AwsConnectionManager.cc  BtConnectionManager.cc  BuryPoint.cc  IotMqttClient.cc  IotMqttClientLink.cc  IotShadowClient.cc  IotShadowClientLink.cc  NetConfig.cc  Persistence.cc  Utils.cc  error.cc
src/collect_node/iot/src/ApNetConfig/: ApConnectionManger.cc  Buffer.cc  Poll.cc  TcpTransport.cc
src/collect_node/mcu/: .clang-tidy  CMakeLists.txt  README.md  compile_commands.json  package.xml
src/collect_node/mcu/.git_hooks/: pre-commit
src/collect_node/mcu/include/: hjlog.h  mcu.h
src/collect_node/mcu/src/: hjlog.cc  mcu.cpp
src/collect_node/mcuota/: CMakeLists.txt  README.md  package.xml
src/collect_node/mcuota/doc/: doc.puml
src/collect_node/mcuota/include/: hjlog.h  mcuota.h
src/collect_node/mcuota/src/: hjlog.cc  mcuota.cpp
src/collect_node/posttunnel/: CMakeLists.txt  README.md  package.xml
src/collect_node/posttunnel/doc/: design.html  design.md
src/collect_node/posttunnel/include/: Curl.h  File.h  MessageQ.h  PostTunnel.h  Reporter.h
src/collect_node/posttunnel/src/: Curl.cc  File.cc  MessageQ.cc  PostTunnel.cc  Reporter.cc
src/collect_node/record_msg/: CMakeLists.txt  README.md  package.xml
src/collect_node/record_msg/include/: record_msg.h
src/collect_node/record_msg/src/: record_msg.cpp
src/collect_node/self_check/: CMakeLists.txt  package.xml
src/collect_node/self_check/include/: self_check.h
src/collect_node/self_check/src/: self_check.cpp
src/collect_node/test_function/: CMakeLists.txt  package.xml
src/collect_node/test_function/include/: test_function.h  test_load_so.h
src/collect_node/test_function/src/: test_load_so.cpp
src/collect_node/test_function1/: CMakeLists.txt  package.xml
src/collect_node/test_function1/include/: test_load_so.h
src/collect_node/test_function1/src/: test_load_so.cpp
src/collect_node/turbidity/: CMakeLists.txt  README.md  package.xml
src/collect_node/turbidity/include/: turbidity.h
src/collect_node/turbidity/src/: turbidity.cpp
src/collect_node/ulsound/: CMakeLists.txt  README.md  compile_commands.json  package.xml
src/collect_node/ulsound/.git_hooks/: pre-commit
src/collect_node/ulsound/.git_hooks/scripts/: run-clang-tidy-commit.py
src/collect_node/ulsound/include/: ulsound.h  ulsound.h.bak
src/collect_node/ulsound/src/: ulsound.cpp  ulsound.cpp.bak
src/collect_node/utils_func/: CMakeLists.txt  README.md  compile_commands.json  package.xml
src/collect_node/utils_func/include/: handle_action.h  log_upload.h  monitor.h  process_cmd.h  record_msg.h  record_msg_alg.h  record_msg_lasting.h  utils_func.h
src/collect_node/utils_func/src/: handle_action.cpp  log_upload.cpp  monitor.cpp  process_cmd.cpp  record_msg.cpp  record_msg_alg.cpp  record_msg_lasting.cpp  utils_func.cpp
src/core_dump/: CMakeLists.txt  package.xml
src/core_dump/include/: core_dump.h
src/core_dump/src/: core_dump.cpp
src/fw_cut2/: CMakeLists.txt  package.xml
src/fw_cut2/include/: Common.h  Schedule.h  Utils.h
src/fw_cut2/include/State/: BaseState.h  UnPack.h  Upgrade.h
src/fw_cut2/src/: Main.cc  Schedule.cc  Utils.cc
src/fw_cut2/src/State/: Unpack.cc  Upgrade.cc
src/health_forward2/: CMakeLists.txt  README.md
src/health_forward2/include/: health_forward.h
src/health_forward2/src/: health_forward.cpp
src/hj_interface/: CMakeLists.txt
src/hjlog/: CMakeLists.txt  README.md  package.xml
src/hjlog/src/: hjlog.cc
src/log_recorder/: CMakeLists.txt  package.xml  rosout.cpp
src/log_redirect/: CMakeLists.txt  package.xml
src/log_redirect/include/: log_redirect.h
src/log_redirect/src/: log_redirect.cpp
src/ota/: CMakeLists.txt  README.md  package.xml
src/ota/include/: BuryPoint.h  Common.h  Schedule.h  Utils.h
src/ota/include/State/: DownLoad.h  End.h  UnPack.h  Upgrade.h
src/ota/src/: BuryPoint.cc  Main.cc  Schedule.cc  Utils.cc
src/ota/src/State/: Download.cc  End.cc  Unpack.cc  Upgrade.cc
src/work_directory/: CMakeLists.txt  README.md  getMd5.py  (+1 more)
(+259 files in other folders)
