<package>
  <name>log_recorder</name>
  <version>0.1.0</version>
  <description>
     modify from ros.
  </description>
  <maintainer email="609384347@qq.com">wangqing</maintainer>
  <license>BSD</license>

  <author>minos</author>
  <author email="609384347@qq.com">wangqing</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rosgraph_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
</package>
