<?xml version="1.0"?>
<package>
  <name>ota</name>
  <version>0.1.0</version>
  <description>
    ota
  </description>
  <maintainer email="yzupl1995@163.com">panlou</maintainer>
  <license>BSD</license>

  <author>panlou</author>
  <author email="yzupl1995@163.com">panlou</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
</package>
