cmake_minimum_required(VERSION 3.0.2)
project(imu)
set (CMAKE_CXX_STANDARD 14)
set( HJ_WORKSPACE_PATH "../..")
set(CMAKE_BUILD_TYPE "RELEASE")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
set(PLATFORM "amd64" CACHE STRING "amd64, i386, arm64_rk, etc.")
if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64")
  set(CMAKE_EXPORT_COMPILE_COMMANDS ON) 
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "i[3-6]86")
  set(CMAKE_EXPORT_COMPILE_COMMANDS ON) 
endif()
set(INSTALL_DEVEL_PATH collect_node)
find_package(catkin REQUIRED COMPONENTS rostime roscpp)

include_directories(include ${catkin_INCLUDE_DIRS})
include_directories("${HJ_WORKSPACE_PATH}/thirdparty/include")
include_directories("${HJ_WORKSPACE_PATH}/hj_interface/include")
link_directories(${catkin_LIBRARY_DIRS})
link_directories("${HJ_WORKSPACE_PATH}/hj_interface/platforms/${PLATFORM}")
link_directories("${HJ_WORKSPACE_PATH}/thirdparty/platforms/${PLATFORM}")
add_definitions(-DFUNCTION_NAME="imu")
catkin_package(CATKIN_DEPENDS message_runtime std_msgs)
add_library(imu src/imu.cpp)
target_link_libraries(imu ${catkin_LIBRARIES} dl)
target_link_libraries(imu base_framework )
target_link_libraries(imu base_device)
set_target_properties(imu PROPERTIES
  LIBRARY_OUTPUT_DIRECTORY ${CATKIN_DEVEL_PREFIX}/lib/${INSTALL_DEVEL_PATH})
