cmake_minimum_required(VERSION 3.0.2)
project(mcu)
set (CMAKE_CXX_STANDARD 14)
set( HJ_WORKSPACE_PATH "../..")
set(PLATFORM "amd64" CACHE STRING "amd64, i386, arm64_rk, etc.")
set(PROJECT_NUMBER "x9" CACHE STRING "project number, such as 2312")
set(INSTALL_DEVEL_PATH collect_node)
find_package(catkin REQUIRED COMPONENTS rostime roscpp)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(${PROJECT_NUMBER} STREQUAL "x9")
  add_definitions(-DHJ_X9)
elseif(${PROJECT_NUMBER} STREQUAL "T1pro")
  add_definitions(-DHJ_T1pro)
  add_definitions(-DX6)
endif()
set(RELEASE_VER "debug" CACHE STRING "debug or release")
if(${RELEASE_VER} STREQUAL "debug")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
elseif(${RELEASE_VER} STREQUAL "release")
  add_definitions(-DCONFIG_ENABLE_LOG=4)
  add_definitions(-DHJ_RELEASE_VER)
  set(CMAKE_BUILD_TYPE "Release")
  set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
endif()

include_directories(include ${catkin_INCLUDE_DIRS})
include_directories("${HJ_WORKSPACE_PATH}/thirdparty/include")
include_directories("${HJ_WORKSPACE_PATH}/hj_interface/include")
link_directories(${catkin_LIBRARY_DIRS})
link_directories("${HJ_WORKSPACE_PATH}/hj_interface/platforms/${PLATFORM}")
link_directories("${HJ_WORKSPACE_PATH}/thirdparty/platforms/${PLATFORM}")
add_definitions(-DFUNCTION_NAME="mcu" -DX6 -DDEBUG)

catkin_package(CATKIN_DEPENDS message_runtime std_msgs)
add_library(mcu 
src/mcu.cpp
src/hjlog.cc)
target_link_libraries(mcu ${catkin_LIBRARIES} dl rt)
target_link_libraries(mcu base_framework)
target_link_libraries(mcu base_device)
set_target_properties(mcu PROPERTIES
  LIBRARY_OUTPUT_DIRECTORY ${CATKIN_DEVEL_PREFIX}/lib/${INSTALL_DEVEL_PATH})
