<?xml version="1.0"?>
<package>
  <name>self_check</name>
  <version>0.1.0</version>
  <description>
    self_check
  </description>
  <maintainer email="clayderman@yardbot.net">wangqing</maintainer>
  <license>BSD</license>

  <author>minos</author>
  <author email="clayderman@yardbot.net">wangqing</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
