<?xml version="1.0"?>
<package>
  <name>test_api</name>
  <version>0.1.0</version>
  <description>
    test
  </description>
  <maintainer email="609384347@qq.com">wangqing</maintainer>
  <license>BSD</license>

  <author>minos</author>
  <author email="609384347@qq.com">wangqing</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>collect_node</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>collect_node</run_depend>
</package>
