cmake_minimum_required(VERSION 3.0.2)
project(turbidity)
set (CMAKE_CXX_STANDARD 14)
set(CMAKE_BUILD_TYPE "RELEASE")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64")
  set(CMAKE_EXPORT_COMPILE_COMMANDS ON) 
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "i[3-6]86")
  set(CMAKE_EXPORT_COMPILE_COMMANDS ON) 
endif()
set( HJ_WORKSPACE_PATH "../..")
set(PLATFORM "amd64" CACHE STRING "amd64, i386, arm64_rk, etc.")
set(PROJECT_NUMBER "x9" CACHE STRING "project number, such as 2312")
set(INSTALL_DEVEL_PATH collect_node)
find_package(catkin REQUIRED COMPONENTS rostime roscpp)

if(${PROJECT_NUMBER} STREQUAL "x9")
  add_definitions(-DHJ_X9)
elseif(${PROJECT_NUMBER} STREQUAL "T1pro")
  add_definitions(-DHJ_T1pro)
endif()

include_directories(include ${catkin_INCLUDE_DIRS})
include_directories("${HJ_WORKSPACE_PATH}/thirdparty/include")
include_directories("${HJ_WORKSPACE_PATH}/hj_interface/include")
link_directories(${catkin_LIBRARY_DIRS})
link_directories("${HJ_WORKSPACE_PATH}/hj_interface/platforms/${PLATFORM}")
link_directories("${HJ_WORKSPACE_PATH}/thirdparty/platforms/${PLATFORM}")
add_definitions(-DFUNCTION_NAME="turbidity")
catkin_package(CATKIN_DEPENDS message_runtime std_msgs)
add_library(turbidity src/turbidity.cpp)
target_link_libraries(turbidity ${catkin_LIBRARIES} dl)
target_link_libraries(turbidity base_framework)
target_link_libraries(turbidity base_device)
set_target_properties(turbidity PROPERTIES
  LIBRARY_OUTPUT_DIRECTORY ${CATKIN_DEVEL_PREFIX}/lib/${INSTALL_DEVEL_PATH})
