cmake_minimum_required(VERSION 3.0.2)
project(ulsound)
set (CMAKE_CXX_STANDARD 14)
if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64")
  set(CMAKE_EXPORT_COMPILE_COMMANDS ON) 
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "i[3-6]86")
  set(CMAKE_EXPORT_COMPILE_COMMANDS ON) 
endif()
set( HJ_WORKSPACE_PATH "../..")
set(PLATFORM "amd64" CACHE STRING "amd64, i386, arm64_rk, etc.")
set(PROJECT_NUMBER "x9" CACHE STRING "project number, such as 2312")
set(INSTALL_DEVEL_PATH collect_node)
find_package(catkin REQUIRED COMPONENTS rostime roscpp)

if(${PROJECT_NUMBER} STREQUAL "x9")
  add_definitions(-DHJ_X9)
elseif(${PROJECT_NUMBER} STREQUAL "T1pro")
  add_definitions(-DHJ_T1pro)
endif()
set(RELEASE_VER "debug" CACHE STRING "debug or release")
if(${RELEASE_VER} STREQUAL "debug")

elseif(${RELEASE_VER} STREQUAL "release")
  add_definitions(-DCONFIG_ENABLE_LOG=4)
  set(CMAKE_BUILD_TYPE "Release")
  set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
endif()

include_directories(include ${catkin_INCLUDE_DIRS})
include_directories("${HJ_WORKSPACE_PATH}/thirdparty/include")
include_directories("${HJ_WORKSPACE_PATH}/hj_interface/include")
link_directories(${catkin_LIBRARY_DIRS})
link_directories("${HJ_WORKSPACE_PATH}/hj_interface/platforms/${PLATFORM}")
link_directories("${HJ_WORKSPACE_PATH}/thirdparty/platforms/${PLATFORM}")
add_definitions(-DFUNCTION_NAME="ulsound")
catkin_package(CATKIN_DEPENDS message_runtime std_msgs)
add_library(ulsound src/ulsound.cpp)
target_link_libraries(ulsound ${catkin_LIBRARIES} dl)
target_link_libraries(ulsound base_framework)
target_link_libraries(ulsound base_device)
set_target_properties(ulsound PROPERTIES
  LIBRARY_OUTPUT_DIRECTORY ${CATKIN_DEVEL_PREFIX}/lib/${INSTALL_DEVEL_PATH})
